# tj-shop

./: .gitignore  CLAUDE.md  compose.yaml  index.html  justfile  package-lock.json  package.json
.claude/: settings.json
apps-script/: Code.gs  deploy.sh
backend/: .env.sample  CLAUDE.md  Cargo.toml
backend/migrations/: 20260526120000_init.sql  20260529120000_seed_stores.sql  20260529130000_seed_catalog.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  telemetry.rs
backend/src/routes/: categories.rs  health.rs  mod.rs  products.rs  stores.rs
backend/tests/: categories.rs  health.rs  products.rs  stores.rs
docs/: plan-claude-2026-05-15.md  plan-codex-2026-05-15.md
docs/claude/arch-init/: README-2026-05-15.md  open-questions-2026-05-15.md  recommended-layout-2026-05-15.md  reconciled-architecture-2026-05-15.md  reference-repos-2026-05-15.md
docs/codex/arch-init/: ChatGPT-Rust-Web-App-Strategy-2026-05-14.md  architecture-seed-axum-sqlx-postgres-2026-05-15.md  reconciled-v1-architecture-seed-2026-05-15.md
plans/: store-shop-views-2026-04-24.md
products/: all-categories.json  chips-crackers-crunchy-bites.json  salads-soups-sides.json  sparkling-water.json  test-categories.json
scripts/: convert-v0-seed.js
v0/: CHANGELOG.md  README.md
v0/apps-script/: .clasp.json
v0/products/: cheese.json  fruits.json  veggies.json
