[package]
name = "tj-shop"
version = "0.1.0"
edition = "2024"

[lib]
name = "tj_shop"
path = "src/lib.rs"

[[bin]]
name = "tj-shop"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "timeout",
    "request-id",
    "normalize-path",
    "sensitive-headers",
] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }

thiserror = "2"
anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
